laga líka file paths í Database.java